From d3cd4d8 (closure):
======================

In prisim/closure.py,

(*) In member function FT() of class ClosurePhaseDelaySpectrum,
add input keyword resmaple to request for resampling of the
delay spectra at independent samples. Update docstring accordingly.
(*) In member function FT() of class ClosurePhaseDelaySpectrum,
add ability to resample and return either resampled or oversampled
results

From c5237ab (closure):
======================

In prisim/closure.py,

(*) Import astroutils.lookup_operations
(*) In member function FT() of class ClosurePhaseDelaySpectrum,
estimate the Fourier transform in subbands

From 4bb6b15 (closure):
======================

In prisim/closure.py,

(*) In member function __init__() of class ClosurePhase, add input
freqs for initialization. Update member function docstring
accordingly
(*) Add class ClosurePhaseDelaySpectrum along with docstring
(*) Add member function __init__() and FT() along with respective
docstrings under class ClosurePhaseDelaySpectrum
(*) Initialize attributes cPhase, f, df, and cPhaseDS in member
function __init__() of class ClosurePhase

From b5e87ff (closure):
======================

In prisim/closure.py,

(*) Update docstring of class ClosurePhaseDelaySpectrum
(*) Update docstring of __init__() member function of class
ClosurePhaseDelaySpectrum

From aeef394 (closure):
======================

In prisim/closure.py,

(*) Update docstring of class ClosurePhase
(*) Start work on class ClosurePhaseDelaySpectrum

From fb3cfea (closure):
======================

In prisim/closure.py,

(*) Add member function smooth_in_tbins() under class ClosurePhase.
Update class docstring accordingly

From b13de6f (closure):
======================

In prisim/closure.py,

(*) Fix bugs in function npz2hdf5()
(*) Update docstring of function npz2hdf5() and member function
__init__() of class ClosurePhase
(*) Fix bugs in member functions __init__() and expicp() of class
ClosurePhase

From e614307 (closure):
======================
