@@ -1,3 +1,13 @@
+From 36465d0 (closure):
+======================
+
+In prisim/closure.py,
+
+(*) In member function __init__() of class ClosurePhaseDelaySpectrum,
+initialize attribute cPhaseDS_resampled
+(*) In member function FT() of class ClosurePhaseDelaySpectrum,
+assign results to attributes cPhaseDS and cPhaseDS_resampled.
+
 From d3cd4d8 (closure):
 ======================
 
